# hackathon_repo

./: Dockerfile  README.md  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  schema.py
server/: app.py
