[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "power-grid-optimizer"
version = "1.0.0"
description = "OpenEnv Power Grid Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]